Update MultithreadedTest.java