@@ -467,7 +467,9 @@ public abstract class MultithreadedTest {
 			deadlockDetectionThread.setDaemon(true);
 			deadlockDetectionThread.start();
 
-			executorService = Executors.newVirtualThreadPerTaskExecutor();
+			// Refactoring this causes testLotsOfValidationFailuresSerializable() to hang forever
+			// (https://github.com/ponder-lab/rdf4j/actions/runs/10550384841/job/29226485226#step:7:5128)
+			executorService = Executors.newFixedThreadPool(Runtime.getRuntime().availableProcessors() * 2);
 
 			Utils.loadShapeData(repository, "complexBenchmark/shacl.trig");
 
